# malone-ai

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
scripts/: check_audio.py  test_ollama.py
src/malone/: __main__.py  app.py
src/malone/audio/: capture.py  playback.py  vad.py
src/malone/config/: settings.py
src/malone/conversation/: loop.py  manager.py
src/malone/llm/: base.py  claude_client.py  ollama_client.py  router.py
src/malone/stt/: transcriber.py
src/malone/tools/: base.py  executor.py  registry.py
src/malone/tools/builtin/: browser.py  code_edit.py  home_assistant.py  network.py  system_info.py
src/malone/tts/: synthesizer.py
